Création du readme ajout des infos

--- a/infos.html
+++ b/infos.html
@@ -29,12 +29,13 @@
 		</p>
 		<h3>Comment jouer</h3>
 		<p>
-			Clavier: W, S et D pour déplacer les pièces, W pour les tourner, P pour mettre le jeu en pause.<br>
-			Tactile: Glisser pour déplacer, appuyer pour tourner les pièces.
+			• Clavier: W, S et D pour déplacer les pièces, W pour les tourner, P pour mettre le jeu en pause.<br>
+			• Tactile: Glisser pour déplacer, appuyer pour tourner les pièces.
 		</p>
 		<h3>License</h3>
 		<p>
-			Le code source est disponible ici: <a href="https://github.com/Artivain/" target="_blank" rel="noopener noreferrer"></a>
+			Le code source est disponible ici: <a href="https://github.com/Artivain/tetris" target="_blank">Voir sur GitHub</a>.<br>
+			La license originale est inconnue. Notre version est disponible sous la license MIT: <a href="https://github.com/Artivain/tetris/blob/main/LICENSE.md" target="_blank">Voir la license</a>.
 		</p>
 	</div>
 
