correction dune erreur

--- a/infos.html
+++ b/infos.html
@@ -29,7 +29,7 @@
 		</p>
 		<h3>Comment jouer</h3>
 		<p>
-			• Clavier: W, S et D pour déplacer les pièces, W pour les tourner, P pour mettre le jeu en pause.<br>
+			• Clavier: A, S et D pour déplacer les pièces, W pour les tourner, P pour mettre le jeu en pause.<br>
 			• Tactile: Glisser pour déplacer, appuyer pour tourner les pièces.
 		</p>
 		<h3>License</h3>
