--- a/infos.html
+++ b/infos.html
@@ -35,7 +35,7 @@
 		<h3>License</h3>
 		<p>
 			Le code source est disponible ici: <a href="https://github.com/Artivain/tetris" target="_blank">Voir sur GitHub</a>.<br>
-			La license originale est inconnue. Notre version est disponible sous la license MIT: <a href="https://github.com/Artivain/tetris/blob/main/LICENSE.md" target="_blank">Voir la license</a>.
+			La license originale est inconnue. Nos modifications sont disponible sous la license MIT.
 		</p>
 	</div>
 
